--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss';
 @import 'flowbite';
+@import "tailwindcss";
 
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
